('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.0.0
	- Be much more flexible in test connection options. [GSM]
	- Skip item if no matching key in foreign_key_info.
		(CPAN bug #32308) [GSM]
	- Overhaul COPY functions: deprecate pg_getline, pg_putline, 
		and pg_endcopy. The new functions are pg_getcopydata, 
		pg_getcopydata_async, pg_putcopydata, and pg_putcopyend. [GSM]
	- Change $dbh->{User} to $dbh->{Username} [GSM]
	- Add three new columns to column_info, to return unquoted 
		version: pg_schema, pg_table, and pg_columns. Add all 
		three to primary_key_info, and the first two to table_info
		(CPAN bug #20282) [GSM]
	- Very experimental support for bind_param_inout, use 
		with caution. [GSM]
	- Switch from pow to powf to support AIX compiler issue.
		(CPAN bug #24579) [GSM]
	- Use adbin, not adsrc, when figuring out the sequence name for the 
		last_insert_id() method. This allows the function to work properly 
		if the sequence name is changed. Note that {pg_cache=>0} should be 
		passed to the function if you expect this might happen.
		(CPAN bug #30924) [GSM]
	- Use unsigned chars when parsing passed-in queries, preventing UTF-8 
		strings from ruining the prepare. UTF-16 may still cause problems.
		(CPAN bug #31577) [GSM]
	- Fix crash when executing query with two placeholders side by side.
		Thanks to Daniel Browning for spotting this. [GSM]
	- Fix bad PG_INTEGER example in docs, thanks to Xavi Drudis Ferran.
		(CPAN bug #31545) [GSM]
	- Force SQL_REAL and SQL_NUMERIC to be float8 not float4.
		(CPAN bug #30010) [GSM]
	- Fix memory leak when using savepoints. (CPAN bug #29791)
		[airwave@cpan.org]
	- Allow data_sources to accept optional arguments. [GSM]
	- Change versioning system to three numbered system.
	- Make sure array items are marked as UTF as needed.
		(CPAN bug #29656) [GSM]		
	- Add support for arrays: can pass in arrayrefs to execute, and 
		they are automatically returned as arrays when fetching. [GSM]